--- a/resource/config.yml
+++ b/resource/config.yml
@@ -1,5 +1,5 @@
 ########################################################################################
-#                                   StellarRanks Config                                #
+#                                   NovaPerms Config                                #
 ########################################################################################
 #                                                                                        #
 #              ____  _       _ _            ____             _                           #
@@ -8,13 +8,13 @@
 #              ___) | ||  __/ | | (_| | |  |  _ < (_| | | | |   <\__ \                   #
 #              |____/ \__\___|_|_|\__,_|_|  |_| \_\__,_|_| |_|_|\_\___/                  #
 #                                                                                        #
-#   ✨ StellarRanks: The Ultimate PocketMine-MP Rank & Permission System                 #
+#   ✨ NovaPerms: The Ultimate PocketMine-MP Rank & Permission System                 #
 #                                                                                        #
 #   Fast, clean, and inspired by LuckPerms. Manage groups, permissions, tracks, and      #
 #   advanced server access with maximum flexibility.                                     #
 #   Built for both single-server and powerful Minecraft networks!                        #
 #                                                                                        #
-#   👉 GitHub: https://github.com/MohamadRZ/StellarRanks                                 #
+#   👉 GitHub: https://github.com/MohamadRZ/NovaPerms                                 #
 #                                                                                        #
 #   📄 Below are expert settings to power-up your server. Every option is documented!    #
 ########################################################################################
@@ -40,7 +40,7 @@ primary_key: username
 # -------------------------------------------------------------------------------------------------
 
 timing:
-  # Enable or disable the built-in performance profiler for StellarRanks.
+  # Enable or disable the built-in performance profiler for NovaPerms.
   # When enabled, collects and reports timing info for each operation!
   enabled: false
 
@@ -57,7 +57,7 @@ timing:
   history_size: 100
 
 ########################################################################################
-#                          StellarRanks: Elevate Your Server!                          #
+#                          NovaPerms: Elevate Your Server!                          #
 #    - LuckPerms-like experience, 100% PHP, stunningly fast and super flexible.        #
 #    - Real time analytics, context meta, tracks, cross-server support, and more!      #
 #    - Clean code, full docs, Open Source, and always community-first!                 #
